--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#server.port = 8080
+server.port = 8085
 #Configure show whitelabel page when not find endpoint (true or false)
 server.error.whitelabel.enabled=true
 # ===============================	# = SQL CONNECTION	# ===============================
-spring.datasource.url = #put here url database url#
-spring.datasource.username = #put username#
-spring.datasource.password = #put password#
+spring.datasource.url = jdbc:sqlserver://agro-blockchain-server.database.windows.net:1433;database=agro-blockchain
+spring.datasource.username = admin-agro-db
+spring.datasource.password = Kevin940211*
 # ===============================	# = SPRING JPA	# ===============================
 #Show query in cmd
 spring.jpa.show-sql=true
